# QfeiDoctor

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PRD.md  ai-changes.md  diagnostic-result.schema.json  fe-architecture.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/diagnostics/: dns.rs  http.rs  ipinfo.rs  mod.rs  result.rs  system.rs  tcp.rs  tls.rs
src-tauri/tests/: smoke_acceptance.rs
src/components/: DiagnosticTrace.tsx  DnsRecordsCard.tsx  Header.tsx  InputBar.tsx  PhaseSection.tsx  ProxyAlert.tsx  QuickActionButton.tsx  RecommendedActions.tsx  StatusBadge.tsx  SummaryCard.tsx
src/components/__tests__/: StatusBadge.test.tsx  tauriShellScope.test.ts
src/hooks/: useDiagnostic.ts
src/styles/: index.css
src/types/: diagnostic.ts
