[package]
name = "qfei-doctor"
version = "0.1.0"
description = "智书诊断助手 - Network Diagnostic Tool"
authors = ["qfeius"]
edition = "2021"

[lib]
name = "qfei_doctor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "qfei-doctor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Diagnostic engine dependencies
hickory-resolver = "0.25"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
rustls = "0.23"
webpki-roots = "1.0"
x509-parser = "0.16"
url = "2"
tokio-rustls = "0.26"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
